--- a/04_Workshop/react_main/package.json
+++ b/04_Workshop/react_main/package.json
@@ -4,9 +4,11 @@
   "private": true,
   "dependencies": {
     "flux": "^3.1.2",
+    "jquery": "^3.2.1",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
-    "react-router-dom": "^4.1.1"
+    "react-router-dom": "^4.1.1",
+    "toastr": "^2.1.2"
   },
   "devDependencies": {
     "react-scripts": "1.0.10"
