--- a/04_Workshop/react_main/package.json
+++ b/04_Workshop/react_main/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "flux": "^3.1.2",
     "jquery": "^3.2.1",
+    "query-string": "^4.3.4",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-router-dom": "^4.1.1",
